# deprecated-open-liiist

./: .env.example  .gitignore  Global-Data-Flow-Visualization.md  README.md  cookies.txt  docker-compose.yml  harbor  package-lock.json
.github/: docker-build.yml
auth-service/: .env.example  Dockerfile  auth-service__Technical_Documentation.md  package-lock.json  package.json  tsconfig.json
certs/: .gitignore  Traefik__Technical_Documentation.md  local-cert.pem  local-key.pem
config/: README.md  traefik.yml
elasticsearch/: .dockerignore  .env.example  Dockerfile  elasticsearch__Technical_Documentation.md  setup-elasticsearch.sh
handle-change-website/: main.go  prova.py
k8s/: auth-secrets.yaml  auth-service.yaml  auth-svc.yaml  auth.yaml  conad.yaml  configmap.yaml  db.yaml  elasticsearch-svc.yaml  elasticsearch.yaml  ghcr-secret.yaml  gros_groups.yaml  ingress.yaml  kibana-svc.yaml  kibana.yaml  longstash-svc.yaml  longstash.yaml  notification-alert.yaml  oasi_tigre.yaml  product-receiver-service.yaml  product-receiver-svc.yaml  product-receiver.yaml  scraping-service.yaml  search-service-svc.yaml  search-service.yaml  secret.yaml  traefik.yaml  (+2 more)
search-service/: .env.example  .gitignore  Cargo.toml  Dockerfile  ITA_DOCUMENTATION.md  README-I-CAN-MAKE-EASY-YOUR-LIFE.md  README.md  data.json  elastic_and_search.md  search-service-DATA-FLOW-VISUALIZATION.md  search-service-DOCUMENTATION.md  search_service__Technical_Documentation.md  tests.py
search-service/src/: code1.txt  handlers.rs  main.rs  models.rs  routes.rs  search.rs  text.txt  utils.rs
(+414 files in other folders)
