[package]
name = "search-service"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = "0.7.7"
axum-macros = "0.4.2"
elasticsearch = "8.15.0-alpha.1"
reqwest = "0.12.8"
serde = { version = "1.0.210", features = ["derive"] }
serde_json = "1.0.128"
tokio = { version = "1.40.0", features = ["full"] }
tower-http = { version = "0.6.1", features = ["cors"] }
tracing = "0.1.40"
tracing-subscriber = { version = "0.3.18", features = ["json", "env-filter", "fmt"] }
hyper = "0.14"  # Aggiungi questa linea
#warp = "0.3.7" # Considera se hai realmente bisogno di Warp insieme ad Axum
sqlx = { version = "0.7", features = ["postgres", "runtime-tokio-native-tls"] }
aide = "0.13.4"

